--- a/k8s-deploy/deployment.yaml
+++ b/k8s-deploy/deployment.yaml
@@ -17,14 +17,14 @@ spec:
       containers:
       - env:
         - name: GIT_REPO
-          value: https://github.com/luxas/workshopctl
+          value: https://github.com/praqma-training/kubernetes-katas
         - name: GIT_SUBDIR
           value: tutorials
         - name: PASSWORD
           valueFrom:
             secretKeyRef:
               key: VSCODE_PASSWORD
-              name: workshopctl
+              name: praqma
         image: praqma/vscode:1.39.2
         imagePullPolicy: Always
         name: code-server
