--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -12,16 +12,28 @@ jobs:
           name: Build Docker image
           command: |
             cd docker-images && docker build -t $IMAGE_NAME .
+      - run:
+          name: Archive Docker image
+          command: docker save -o image.tar $IMAGE_NAME
+      - persist_to_workspace:
+          root: .
+          paths:
+            - ./image.tar
   test-with-goss:
     environment:
       IMAGE_NAME: building-on-ci:ci
-      GOSS_FILES_PATH: docker-images/
+      GOSS_FILES_PATH: project/docker-images/
       GOSS_FILES_STRATEGY: cp
     docker:
       - image: kiwicom/dgoss
     steps:
+      - attach_workspace:
+          at: /tmp/workspace
       - checkout
       - setup_remote_docker
+      - run:
+          name: Load archived Docker image
+          command: docker load -i /tmp/workspace/image.tar
       - run:
           name: Test image with dgoss
           command: dgoss run $IMAGE_NAME
