--- a/docker-images/goss.yaml
+++ b/docker-images/goss.yaml
@@ -1,12 +1,40 @@
+#Test that the code-server process is running
 process:
   code-server:
     running: true
+
+#Test that git, docker, kubectl and helm are installed. We expect docker and kubectl commands to fail due to no connection.
+command:
+  git-version:
+    exit-status: 0
+    exec: "git version" 
+    timeout: 5000
+  docker-version:
+    exit-status: 1
+    exec: "docker version"
+    stderr:
+    - "Cannot connect to the Docker daemon"
+    timeout: 5000
+  kubectl-version:
+    exit-status: 1
+    exec: "kubectl version"
+    stdout:
+    - "Client Version:"
+    timeout: 5000
+  helm-version:
+    exit-status: 0
+    exec: "helm list"
+    timeout: 5000
+
+#Test that we are listening
 port:
   tcp:8080:
     listening: true
     ip:
     - 0.0.0.0
-http:
+
+#Test that we can reach the VScode container by pinging the login page through https
+http: 
   https://localhost:8080/login:
     status: 200
     allow-insecure: true
