Install pass to fix docker login
docker-compose apt package breaks default auth.
We fix it by installing pass. https://bugs.launchpad.net/ubuntu/+source/docker-compose/+bug/1796119

--- a/docker-images/Dockerfile
+++ b/docker-images/Dockerfile
@@ -10,7 +10,8 @@ RUN apt-get update && \
         docker.io \
         npm \
         bsdtar \
-        docker-compose && \
+        docker-compose \
+        gnupg2 pass && \
     apt-get clean
 
 # Install kubectl
